# quick-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
agents/: business-extract-structured.md  business-extract.md  function-spec-validator.md  subagent-validate-eval-list.md  subagent-validator-contains.md  template.md
docs/: cli.md  outputs.md  python.md  state.md  templates.md
src/quick_agent/: __init__.py  agent_call_tool.py  agent_registry.py  agent_tools.py  cli.py  directory_permissions.py  input_adaptors.py  io_utils.py  json_utils.py  llms.txt  orchestrator.py  prompting.py  quick_agent.py  tools_loader.py
src/quick_agent/models/: __init__.py  agent_spec.py  chain_step_spec.py  handoff_spec.py  loaded_agent_file.py  model_spec.py  output_spec.py  run_input.py  tool_impl_spec.py  tool_json.py
src/quick_agent/schemas/: outputs.py
src/quick_agent/tools/filesystem/: adapter.py  read_text.py  write_text.py
src/quick_agent/tools/filesystem.read_text/: tool.json
src/quick_agent/tools/filesystem.write_text/: tool.json
src/tests/: test_agent.py  test_directory_permissions.py  test_httpx_tools.py  test_input_adaptors.py  test_integration.py  test_orchestrator.py  test_tools.py
src/tests/fixtures/function-spec-validator/: function1.md  function2.md  function3.md  list.md  results.md
typings/: frontmatter.pyi
