[project]
name = "quick-agent"
description = "Minimal, local-first agent runner using Markdown front matter."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Charles Verge", email = "1906614+charlesverge@users.noreply.github.com"}
]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
  "anyio",
  "pydantic",
  "pydantic-ai",
  "python-frontmatter",
]
keywords = ["agents", "llm", "automation", "pydantic", "markdown", "orchestrator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/charlesverge/quick-agent"
Documentation = "https://github.com/charlesverge/quick-agent/tree/main/docs"
Issues = "https://github.com/charlesverge/quick-agent/issues"

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]
test = [
  "pytest",
]

[project.scripts]
quick-agent = "quick_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:codecs.open\\(\\) is deprecated\\. Use open\\(\\) instead\\.:DeprecationWarning:frontmatter",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quick_agent = ["tools/**/tool.json", "agents/**/*.md"]

[tool.setuptools.data-files]
"quick_agent/agents" = ["agents/**/*.md"]

[tool.mypy]
mypy_path = "typings"
files = ["src"]

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F"]
